# primer_design

./: .gitignore  README.md  pyproject.toml
.ipynb_checkpoints/: pyproject-checkpoint.toml
examples/: insertion.ipynb  multi_sdm.ipynb  sdm.ipynb  site_sat.ipynb
primer_design/: __init__.py  designers.py  sdm.py  seq_utils.py  tm_calculator.py
primer_design/.ipynb_checkpoints/: ecoli_codon_table-checkpoint.py  sdm-checkpoint.py
